raw groupDebt
